# python-executor

./: Makefile  README.md  pyproject.toml
src/: main.py
src/domain/model/: script.py
