[tool.poetry]
name = "fastapi-starter"
version = "1.0.0"
description = "A starter kit for fastapi."
authors = ["FooQoo <horseshoes.buzz.17@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_starter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
black = "^23.3.0"
flake8 = "^7.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
